--- a/style.css
+++ b/style.css
@@ -16,15 +16,23 @@ body {
     font-family: sans-serif;
     font-weight: bold;
     padding: 0;
-    border: 2px black solid;
+    /* border: 2px black solid; */
     margin: 0;
     
     /* rgb(82, 117, 133) */
 }
+.mainBody {
+    margin-left: 800px;
+    margin-top: 100px;
+
+}
 .register {
     color: white; 
     font-weight: bold;
+    padding: 10px;
     background-color: rgb(86, 51, 38);
+    margin: 40px;
+    margin-left: 200px;
 }
 /* .mainBody {
     display: flex;
@@ -33,4 +41,6 @@ body {
 } */
 .blanks {
     background-color:rgb(240, 210, 199) ;
+    width: 200px;
+    padding: 10px;
 }
